--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="initial-scale=1, width=device-width"/>
-        <link rel="stylesheet" href="./index.css"/>
+        <link rel="stylesheet" href="index.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <!-- hero bagian -->
         <div class="hero">
 
             <video  autoplay loop class="video-background">
-                <source src="./video.d48e218167a19525e9ae.mp4" type="video/mp4">
+                <source src="./Assets/video.d48e218167a19525e9ae.mp4" type="video/mp4">
             </video>
 
             <div class="app-header">
@@ -29,7 +28,7 @@
                 class="profile-icon"
                 loading="lazy"
                 alt=""
-                src="./Untitled-2.png"/>
+                src="./Assets/Untitled-2.png"/>
                 <div class="profile-title">
                     <div class="title-header">Welcome to My Portfolio</div>
                     <div class="profile-button">About Me</div>
@@ -37,14 +36,13 @@
             </div>
         </div>
 
-        <!-- biodata  -->
         <div class="biodata">
             <div class="biodata-image">
                 <img
                 class="profile-image1"
                 loading="lazy"
                 alt=""
-                src="./1697403718521.jpeg"/>
+                src="./Assets/1697403718521.jpeg"/>
             </div>
             <div class="biodata-profiling">
                 <div class="biodata-title">Hi, I'm Kamil 🤓</div>
@@ -70,7 +68,7 @@
                             class="portfolio-image"
                             loading="lazy"
                             alt=""
-                            src="./Frame 7.png"/>
+                            src="./Assets/Frame 7.png"/>
                         </div>
                         <div class="portfolio-title">Freelance Website</div>
                         <div class="portfolio-subtitle">This Website is about freelance portfolio Good For business</div>
@@ -82,7 +80,7 @@
                             class="portfolio-image"
                             loading="lazy"
                             alt=""
-                            src="./Frame 7-3.png"/>
+                            src="./Assets/Frame 7-3.png"/>
                         </div>
                         <div class="portfolio-title">Freelance Website</div>
                         <div class="portfolio-subtitle">This Website is about freelance portfolio Good For business</div>
@@ -94,7 +92,7 @@
                             class="portfolio-image"
                             loading="lazy"
                             alt=""
-                            src="./Frame 7-2.png"/>
+                            src="./Assets/Frame 7-2.png"/>
                         </div>
                         <div class="portfolio-title">Freelance Website</div>
                         <div class="portfolio-subtitle">This Website is about freelance portfolio Good For business</div>
